--- a/KasseApparat/KasseApparat/MainWindow.xaml
+++ b/KasseApparat/KasseApparat/MainWindow.xaml
@@ -20,7 +20,7 @@
             <ColumnDefinition Width="289*"></ColumnDefinition>
             <ColumnDefinition Width="262*"></ColumnDefinition>
         </Grid.ColumnDefinitions>
-        <GroupBox Grid.Column="0" DataContext="{StaticResource ProductButtonControl}" x:Name="Products" 
+        <GroupBox Grid.Column="0" DataContext="{StaticResource ProductButtonControl}" x:Name="CurrentButtonPage" 
                   Header="Produkter" Margin="10,10,10.2,10.4" BorderThickness="2">
             <Grid Margin="4">
                 <Grid.RowDefinitions>
@@ -36,6 +36,9 @@
                         <ColumnDefinition Width="24*"></ColumnDefinition>
                         <ColumnDefinition Width="14*"></ColumnDefinition>
                     </Grid.ColumnDefinitions>
+                    <Button Margin="5" 
+                            Content="Refresh"
+                            Click="ButtonRefreshClick"></Button>
                     <Label Grid.Row="0" Grid.Column="1" 
                            HorizontalAlignment="Right"
                            Content="Page" Width="35"/>
@@ -66,7 +69,7 @@
                             Margin="5"
                             x:Name="ProductButton01"
                             Tag="0"
-                            IsEnabled="{Binding Products[0].ButtonIsEnabled}"
+                            IsEnabled="{Binding CurrentButtonPage[0].ButtonIsEnabled}"
                             Click="ButtonProductClick">
                         <Grid >
                             <Grid.RowDefinitions>
@@ -74,9 +77,9 @@
                                 <RowDefinition Height="1*"></RowDefinition>
                             </Grid.RowDefinitions>
                             <Label Grid.Row="0"
-                                   Content="{Binding Products[0].Name}"></Label>
+                                   Content="{Binding CurrentButtonPage[0].Name}"></Label>
                             <Label Grid.Row="1" 
-                                   Content="{Binding Products[0].Price}"
+                                   Content="{Binding CurrentButtonPage[0].Price}"
                                    HorizontalAlignment="Right"></Label>
                         </Grid>
                     </Button>
@@ -84,7 +87,7 @@
                             Margin="5"
                             x:Name="ProductButton02"
                             Tag="1"
-                            IsEnabled="{Binding Products[1].ButtonIsEnabled}"
+                            IsEnabled="{Binding CurrentButtonPage[1].ButtonIsEnabled}"
                             Click="ButtonProductClick">
                         <Grid >
                             <Grid.RowDefinitions>
@@ -92,9 +95,9 @@
                                 <RowDefinition Height="1*"></RowDefinition>
                             </Grid.RowDefinitions>
                             <Label Grid.Row="0"
-                                   Content="{Binding Products[1].Name}"></Label>
+                                   Content="{Binding CurrentButtonPage[1].Name}"></Label>
                             <Label Grid.Row="1" 
-                                   Content="{Binding Products[1].Price}"
+                                   Content="{Binding CurrentButtonPage[1].Price}"
                                    HorizontalAlignment="Right"></Label>
                         </Grid>
                     </Button>
@@ -102,7 +105,7 @@
                             Margin="5"
                             x:Name="ProductButton03"
                             Tag="2"
-                            IsEnabled="{Binding Products[2].ButtonIsEnabled}"
+                            IsEnabled="{Binding CurrentButtonPage[2].ButtonIsEnabled}"
                             Click="ButtonProductClick">
                         <Grid >
                             <Grid.RowDefinitions>
@@ -110,9 +113,9 @@
                                 <RowDefinition Height="1*"></RowDefinition>
                             </Grid.RowDefinitions>
                             <Label Grid.Row="0"
-                                   Content="{Binding Products[2].Name}"></Label>
+                                   Content="{Binding CurrentButtonPage[2].Name}"></Label>
                             <Label Grid.Row="1" 
-                                   Content="{Binding Products[2].Price}"
+                                   Content="{Binding CurrentButtonPage[2].Price}"
                                    HorizontalAlignment="Right"></Label>
                         </Grid>
                     </Button>
@@ -120,7 +123,7 @@
                             Margin="5"
                             x:Name="ProductButton04"
                             Tag="3"
-                            IsEnabled="{Binding Products[3].ButtonIsEnabled}"
+                            IsEnabled="{Binding CurrentButtonPage[3].ButtonIsEnabled}"
                             Click="ButtonProductClick">
                         <Grid >
                             <Grid.RowDefinitions>
@@ -128,9 +131,9 @@
                                 <RowDefinition Height="1*"></RowDefinition>
                             </Grid.RowDefinitions>
                             <Label Grid.Row="0"
-                                   Content="{Binding Products[3].Name}"></Label>
+                                   Content="{Binding CurrentButtonPage[3].Name}"></Label>
                             <Label Grid.Row="1" 
-                                   Content="{Binding Products[3].Price}"
+                                   Content="{Binding CurrentButtonPage[3].Price}"
                                    HorizontalAlignment="Right"></Label>
                         </Grid>
                     </Button>
@@ -138,7 +141,7 @@
                             Margin="5"
                             Tag="4"
                             x:Name="ProductButton05"
-                            IsEnabled="{Binding Products[4].ButtonIsEnabled}"
+                            IsEnabled="{Binding CurrentButtonPage[4].ButtonIsEnabled}"
                             Click="ButtonProductClick">
                         <Grid >
                             <Grid.RowDefinitions>
@@ -146,11 +149,11 @@
                                 <RowDefinition Height="1*"></RowDefinition>
                             </Grid.RowDefinitions>
                             <TextBlock Grid.Row="0"
-                                       Text="{Binding Products[4].Name}"
+                                       Text="{Binding CurrentButtonPage[4].Name}"
                                        TextAlignment="Center"
                                        TextWrapping="WrapWithOverflow"/>
                             <Label Grid.Row="1" 
-                                   Content="{Binding Products[4].Price}"
+                                   Content="{Binding CurrentButtonPage[4].Price}"
                                    HorizontalAlignment="Center"></Label>
                         </Grid>
                     </Button>
@@ -158,7 +161,7 @@
                             Margin="5"
                             x:Name="ProductButton06"
                             Tag="5"
-                            IsEnabled="{Binding Products[5].ButtonIsEnabled}"
+                            IsEnabled="{Binding CurrentButtonPage[5].ButtonIsEnabled}"
                             Click="ButtonProductClick">
                         <Grid >
                             <Grid.RowDefinitions>
@@ -166,9 +169,9 @@
                                 <RowDefinition Height="1*"></RowDefinition>
                             </Grid.RowDefinitions>
                             <Label Grid.Row="0"
-                                   Content="{Binding Products[5].Name}"></Label>
+                                   Content="{Binding CurrentButtonPage[5].Name}"></Label>
                             <Label Grid.Row="1" 
-                                   Content="{Binding Products[5].Price}"
+                                   Content="{Binding CurrentButtonPage[5].Price}"
                                    HorizontalAlignment="Right"></Label>
                         </Grid>
                     </Button>
@@ -176,7 +179,7 @@
                             Margin="5"
                             x:Name="ProductButton07"
                             Tag="6"
-                            IsEnabled="{Binding Products[6].ButtonIsEnabled}"
+                            IsEnabled="{Binding CurrentButtonPage[6].ButtonIsEnabled}"
                             Click="ButtonProductClick">
                         <Grid >
                             <Grid.RowDefinitions>
@@ -184,9 +187,9 @@
                                 <RowDefinition Height="1*"></RowDefinition>
                             </Grid.RowDefinitions>
                             <Label Grid.Row="0"
-                                   Content="{Binding Products[6].Name}"></Label>
+                                   Content="{Binding CurrentButtonPage[6].Name}"></Label>
                             <Label Grid.Row="1" 
-                                   Content="{Binding Products[6].Price}"
+                                   Content="{Binding CurrentButtonPage[6].Price}"
                                    HorizontalAlignment="Right"></Label>
                         </Grid>
                     </Button>
@@ -194,7 +197,7 @@
                             Margin="5"
                             x:Name="ProductButton08"
                             Tag="7"
-                            IsEnabled="{Binding Products[7].ButtonIsEnabled}"
+                            IsEnabled="{Binding CurrentButtonPage[7].ButtonIsEnabled}"
                             Click="ButtonProductClick">
                         <Grid >
                             <Grid.RowDefinitions>
@@ -202,10 +205,10 @@
                                 <RowDefinition Height="1*"></RowDefinition>
                             </Grid.RowDefinitions>
                             <Label Grid.Row="0"
-                                   Content="{Binding Products[7].Name}"
+                                   Content="{Binding CurrentButtonPage[7].Name}"
                                    Name="Label7"></Label>
                             <Label Grid.Row="1" 
-                                   Content="{Binding Products[7].Price}"
+                                   Content="{Binding CurrentButtonPage[7].Price}"
                                    HorizontalAlignment="Right"></Label>
                         </Grid>
                     </Button>
@@ -213,7 +216,7 @@
                             Margin="5"
                             x:Name="ProductButton09"
                             Tag="8"
-                            IsEnabled="{Binding Products[8].ButtonIsEnabled}"
+                            IsEnabled="{Binding CurrentButtonPage[8].ButtonIsEnabled}"
                             Click="ButtonProductClick">
                         <Grid >
                             <Grid.RowDefinitions>
@@ -221,9 +224,9 @@
                                 <RowDefinition Height="1*"></RowDefinition>
                             </Grid.RowDefinitions>
                             <Label Grid.Row="0"
-                                   Content="{Binding Products[8].Name}"></Label>
+                                   Content="{Binding CurrentButtonPage[8].Name}"></Label>
                             <Label Grid.Row="1" 
-                                   Content="{Binding Products[8].Price}"
+                                   Content="{Binding CurrentButtonPage[8].Price}"
                                    HorizontalAlignment="Right"></Label>
                         </Grid>
                     </Button>
@@ -231,7 +234,7 @@
                             Margin="5"
                             x:Name="ProductButton10"
                             Tag="9"
-                            IsEnabled="{Binding Products[9].ButtonIsEnabled}"
+                            IsEnabled="{Binding CurrentButtonPage[9].ButtonIsEnabled}"
                             Click="ButtonProductClick">
                         <Grid >
                             <Grid.RowDefinitions>
@@ -239,9 +242,9 @@
                                 <RowDefinition Height="1*"></RowDefinition>
                             </Grid.RowDefinitions>
                             <Label Grid.Row="0"
-                                   Content="{Binding Products[9].Name}"></Label>
+                                   Content="{Binding CurrentButtonPage[9].Name}"></Label>
                             <Label Grid.Row="1" 
-                                   Content="{Binding Products[9].Price}"
+                                   Content="{Binding CurrentButtonPage[9].Price}"
                                    HorizontalAlignment="Right"></Label>
                         </Grid>
                     </Button>
@@ -249,7 +252,7 @@
                             Margin="5"
                             x:Name="ProductButton11"
                             Tag="10"
-                            IsEnabled="{Binding Products[10].ButtonIsEnabled}"
+                            IsEnabled="{Binding CurrentButtonPage[10].ButtonIsEnabled}"
                             Click="ButtonProductClick">
                         <Grid >
                             <Grid.RowDefinitions>
@@ -257,9 +260,9 @@
                                 <RowDefinition Height="1*"></RowDefinition>
                             </Grid.RowDefinitions>
                             <Label Grid.Row="0"
-                                   Content="{Binding Products[10].Name}"></Label>
+                                   Content="{Binding CurrentButtonPage[10].Name}"></Label>
                             <Label Grid.Row="1" 
-                                   Content="{Binding Products[10].Price}"
+                                   Content="{Binding CurrentButtonPage[10].Price}"
                                    HorizontalAlignment="Right"></Label>
                         </Grid>
                     </Button>
@@ -267,7 +270,7 @@
                             Margin="5"
                             x:Name="ProductButton12"
                             Tag="11"
-                            IsEnabled="{Binding Products[11].ButtonIsEnabled}"
+                            IsEnabled="{Binding CurrentButtonPage[11].ButtonIsEnabled}"
                             Click="ButtonProductClick">
                         <Grid >
                             <Grid.RowDefinitions>
@@ -275,9 +278,9 @@
                                 <RowDefinition Height="1*"></RowDefinition>
                             </Grid.RowDefinitions>
                             <Label Grid.Row="0"
-                                   Content="{Binding Products[11].Name}"></Label>
+                                   Content="{Binding CurrentButtonPage[11].Name}"></Label>
                             <Label Grid.Row="1" 
-                                   Content="{Binding Products[11].Price}"
+                                   Content="{Binding CurrentButtonPage[11].Price}"
                                    HorizontalAlignment="Right"></Label>
                         </Grid>
                     </Button>
