Productcategories and shit

--- a/Backend/Backend/Views/MainWindow.xaml
+++ b/Backend/Backend/Views/MainWindow.xaml
@@ -29,13 +29,13 @@
         <!-- Column 0 -->
         <Grid Grid.Row="1" Margin="10">
             <Label Content="Produktkategorier" Padding="0" HorizontalAlignment="Left" VerticalAlignment="Top" FontSize="12pt"/>
-            <ListBox Margin="0, 30, 0, 0" ItemsSource="{Binding CategoryList}" DisplayMemberPath="Name"/>
+            <ListBox Margin="0, 30, 0, 0" ItemsSource="{Binding Categories}" DisplayMemberPath="Name" SelectedIndex="{Binding Categories.CurrentIndex, Mode=TwoWay}"/>
         </Grid>
 
         <!-- Column 1 -->
         <Grid Grid.Row="1" Grid.Column="1" Margin="10">
             <Label Content="Produkter" Padding="0" HorizontalAlignment="Left" VerticalAlignment="Top" FontSize="12pt"/>
-            <ListView Margin="0, 30, 0, 0" ItemsSource="{Binding ProductList}" SelectedItem="{Binding CurrentCategory, Mode=TwoWay}">
+            <ListView Margin="0, 30, 0, 0" ItemsSource="{Binding Categories.CurrentProductList}" >
                 <ListView.View>
                     <GridView>
                         <GridView.Columns>
