--- a/Backend/Backend/App.xaml
+++ b/Backend/Backend/App.xaml
@@ -2,8 +2,9 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:Backend"
+             xmlns:p="clr-namespace:Backend.Properties"
              StartupUri="Views/MainWindow.xaml">
     <Application.Resources>
-         
+         <p:Settings x:Key="Settings"/>
     </Application.Resources>
 </Application>
