--- a/KasseApparat/KasseApparat/MainWindow.xaml
+++ b/KasseApparat/KasseApparat/MainWindow.xaml
@@ -67,8 +67,7 @@
                             Margin="5"
                             x:Name="ProductButton01"
                             Tag="0"
-                            IsEnabled="{Binding CurrentButtonPage[0].ButtonIsEnabled}"
-                            Click="ButtonProductClick">
+                            Command="{Binding CurrentButtonPage[0].AddCommand}">
                         <Grid >
                             <Grid.RowDefinitions>
                                 <RowDefinition Height="1*"></RowDefinition>
@@ -85,8 +84,8 @@
                             Margin="5"
                             x:Name="ProductButton02"
                             Tag="1"
-                            IsEnabled="{Binding CurrentButtonPage[1].ButtonIsEnabled}"
-                            Click="ButtonProductClick">
+                            Command="{Binding CurrentButtonPage[1].AddCommand}"
+                            >
                         <Grid >
                             <Grid.RowDefinitions>
                                 <RowDefinition Height="1*"></RowDefinition>
@@ -103,8 +102,7 @@
                             Margin="5"
                             x:Name="ProductButton03"
                             Tag="2"
-                            IsEnabled="{Binding CurrentButtonPage[2].ButtonIsEnabled}"
-                            Click="ButtonProductClick">
+                            Command="{Binding CurrentButtonPage[2].AddCommand}">
                         <Grid >
                             <Grid.RowDefinitions>
                                 <RowDefinition Height="1*"></RowDefinition>
@@ -121,8 +119,7 @@
                             Margin="5"
                             x:Name="ProductButton04"
                             Tag="3"
-                            IsEnabled="{Binding CurrentButtonPage[3].ButtonIsEnabled}"
-                            Click="ButtonProductClick">
+                            Command="{Binding CurrentButtonPage[3].AddCommand}">
                         <Grid >
                             <Grid.RowDefinitions>
                                 <RowDefinition Height="1*"></RowDefinition>
@@ -139,8 +136,7 @@
                             Margin="5"
                             Tag="4"
                             x:Name="ProductButton05"
-                            IsEnabled="{Binding CurrentButtonPage[4].ButtonIsEnabled}"
-                            Click="ButtonProductClick">
+                            Command="{Binding CurrentButtonPage[4].AddCommand}">
                         <Grid >
                             <Grid.RowDefinitions>
                                 <RowDefinition Height="1*"></RowDefinition>
@@ -159,8 +155,7 @@
                             Margin="5"
                             x:Name="ProductButton06"
                             Tag="5"
-                            IsEnabled="{Binding CurrentButtonPage[5].ButtonIsEnabled}"
-                            Click="ButtonProductClick">
+                            Command="{Binding CurrentButtonPage[5].AddCommand}">
                         <Grid >
                             <Grid.RowDefinitions>
                                 <RowDefinition Height="1*"></RowDefinition>
@@ -177,8 +172,7 @@
                             Margin="5"
                             x:Name="ProductButton07"
                             Tag="6"
-                            IsEnabled="{Binding CurrentButtonPage[6].ButtonIsEnabled}"
-                            Click="ButtonProductClick">
+                            Command="{Binding CurrentButtonPage[6].AddCommand}">
                         <Grid >
                             <Grid.RowDefinitions>
                                 <RowDefinition Height="1*"></RowDefinition>
@@ -195,8 +189,7 @@
                             Margin="5"
                             x:Name="ProductButton08"
                             Tag="7"
-                            IsEnabled="{Binding CurrentButtonPage[7].ButtonIsEnabled}"
-                            Click="ButtonProductClick">
+                            Command="{Binding CurrentButtonPage[8].AddCommand}">
                         <Grid >
                             <Grid.RowDefinitions>
                                 <RowDefinition Height="1*"></RowDefinition>
@@ -214,8 +207,7 @@
                             Margin="5"
                             x:Name="ProductButton09"
                             Tag="8"
-                            IsEnabled="{Binding CurrentButtonPage[8].ButtonIsEnabled}"
-                            Click="ButtonProductClick">
+                            Command="{Binding CurrentButtonPage[9].AddCommand}">
                         <Grid >
                             <Grid.RowDefinitions>
                                 <RowDefinition Height="1*"></RowDefinition>
@@ -232,8 +224,7 @@
                             Margin="5"
                             x:Name="ProductButton10"
                             Tag="9"
-                            IsEnabled="{Binding CurrentButtonPage[9].ButtonIsEnabled}"
-                            Click="ButtonProductClick">
+                            Command="{Binding CurrentButtonPage[9].AddCommand}">
                         <Grid >
                             <Grid.RowDefinitions>
                                 <RowDefinition Height="1*"></RowDefinition>
@@ -250,8 +241,7 @@
                             Margin="5"
                             x:Name="ProductButton11"
                             Tag="10"
-                            IsEnabled="{Binding CurrentButtonPage[10].ButtonIsEnabled}"
-                            Click="ButtonProductClick">
+                            Command="{Binding CurrentButtonPage[10].AddCommand}">
                         <Grid >
                             <Grid.RowDefinitions>
                                 <RowDefinition Height="1*"></RowDefinition>
@@ -268,8 +258,7 @@
                             Margin="5"
                             x:Name="ProductButton12"
                             Tag="11"
-                            IsEnabled="{Binding CurrentButtonPage[11].ButtonIsEnabled}"
-                            Click="ButtonProductClick">
+                            Command="{Binding CurrentButtonPage[11].AddCommand}">
                         <Grid >
                             <Grid.RowDefinitions>
                                 <RowDefinition Height="1*"></RowDefinition>
