--- a/Backend/Backend/Views/MainWindow.xaml
+++ b/Backend/Backend/Views/MainWindow.xaml
@@ -54,8 +54,8 @@
         <StackPanel Grid.Column="2" Grid.Row="1" Margin="10">
             <Label Content="Hovedmenu" Padding="0" FontSize="12pt"/>
             <Button Content="_Opret produkt" FontSize="10pt" Height="40" Margin="0, 10" Command="{Binding OpenAddProductWindowCommand}"/>
-            
-            <Button Content="_Rediger produkt" FontSize="10pt" Height="40" Margin="0, 10"/>
+
+            <Button Content="_Rediger produkt" FontSize="10pt" Height="40" Margin="0, 10" Command="{Binding OpenEditProductWindowCommand}"/>
             <Button Content="_Slet produkt" FontSize="10pt" Height="40" Margin="0, 10"/>
             <Button Content="_Luk administrationssystem" FontSize="10pt" Height="40" Margin="0, 10" Click="CloseMainWindowClick"/>
         </StackPanel>
