Fixed some errors

--- a/Backend/Backend/Views/EditProductWindow.xaml
+++ b/Backend/Backend/Views/EditProductWindow.xaml
@@ -26,7 +26,7 @@
             <TextBox Name="textboxBarcode" MaxLength="75" Text="{Binding ProductToEdit.ProductNumber}"/>
 
             <Label Content="Pris"/>
-            <TextBox Name="textboxPrice" PreviewTextInput="textboxPrice_PreviewTextInput" MaxLength="20" Text="{Binding ProductToEdit.Price, Mode=OneWay}"/>
+            <TextBox Name="textboxPrice" PreviewTextInput="textboxPrice_PreviewTextInput" MaxLength="20" Text="{Binding ProductToEdit.Price}"/>
 
             <Label Content="Kategori"/>
             <ComboBox Name="ComboboxCategory" ItemsSource="{Binding Categories, Mode=OneWay}" DisplayMemberPath="Name" SelectedIndex="{Binding currentCatIndex}"/>
