--- a/Backend/Backend/Views/SettingsDialog.xaml
+++ b/Backend/Backend/Views/SettingsDialog.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Backend.Views"
         mc:Ignorable="d"
-        Title="Indstillinger" Height="180" Width="300" WindowStyle="ToolWindow" ResizeMode="CanMinimize" WindowStartupLocation="CenterScreen">
+        Title="Indstillinger" Height="200" Width="300" WindowStyle="ToolWindow" ResizeMode="CanMinimize" WindowStartupLocation="CenterScreen">
     <Grid Margin="10">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="1*"/>
@@ -25,10 +25,10 @@
 
         <StackPanel Grid.Row="2" Grid.Column="1" HorizontalAlignment="Left" VerticalAlignment="Top">
             <StackPanel Orientation="Horizontal"  Margin="0 10 0 0">
-                <Button Content="Gem" Click="SaveSettings"/>
-                <Button Content="Annuller" Click="CancelSettings" Margin="30 0 0 0"/>
+                <Button Content="Gem" Click="SaveSettings" Padding="10 5"/>
+                <Button Content="Annuller" Click="CancelSettings" Margin="20 0 0 0" Padding="10 5"/>
             </StackPanel>
-            <Button Content="Test forbindelse" Click="TestConnection" Margin="0 10 0 0" VerticalAlignment="Top"/>
+            <Button Content="Test forbindelse" Click="TestConnection" Margin="0 10 0 0" Padding="5" VerticalAlignment="Top"/>
         </StackPanel>
     </Grid>
 </Window>
