--- a/Backend/Backend/Views/EditProductWindow.xaml
+++ b/Backend/Backend/Views/EditProductWindow.xaml
@@ -20,13 +20,13 @@
             <Label Content="Rediger produkt" Padding="0" FontSize="12pt"/>
 
             <Label Content="Produktnavn"/>
-            <TextBox Name="textboxName" MaxLength="75" Text="{Binding ProductToEdit.Name}"/>
+            <TextBox Name="textboxName" MaxLength="75" Text="{Binding ProductToEdit.BName, UpdateSourceTrigger=PropertyChanged}"/>
 
             <Label Content="Stregkode"/>
-            <TextBox Name="textboxBarcode" MaxLength="75" Text="{Binding ProductToEdit.ProductNumber}"/>
+            <TextBox Name="textboxBarcode" MaxLength="75" Text="{Binding ProductToEdit.BProductNumber, UpdateSourceTrigger=PropertyChanged}"/>
 
             <Label Content="Pris"/>
-            <TextBox Name="textboxPrice" PreviewTextInput="textboxPrice_PreviewTextInput" MaxLength="20" Text="{Binding ProductToEdit.Price}"/>
+            <TextBox Name="textboxPrice" PreviewTextInput="textboxPrice_PreviewTextInput" MaxLength="20" Text="{Binding ProductToEdit.StringBPrice, UpdateSourceTrigger=PropertyChanged}"/>
 
             <Label Content="Kategori"/>
             <ComboBox Name="ComboboxCategory" ItemsSource="{Binding Categories, Mode=OneWay}" DisplayMemberPath="Name" SelectedIndex="{Binding currentCatIndex}"/>
@@ -34,8 +34,9 @@
         </StackPanel>
         <StackPanel Grid.Column="1" Grid.Row="1" Margin="10">
             <Label Content="Hovedmenu" Padding="0" FontSize="12pt"/>
-            <Button Content="_Gem" FontSize="10pt" Height="40" Margin="0, 10"/>
+            <Button Content="_Gem" FontSize="10pt" Height="40" Margin="0, 10" Command="{Binding SaveProductCommand}"/>
             <Button Content="_Annuller" FontSize="10pt" Height="40" Margin="0, 10" Click="Annuller"/>
+            <Button Content="Ny produktkategori" Margin="0,40"  Command="{Binding AddCategoryCommand}"/>
         </StackPanel>
     </Grid>
 </Window>
