--- a/Backend/Backend/Views/MainWindow.xaml
+++ b/Backend/Backend/Views/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Backend.Views"
         mc:Ignorable="d"
-        Title="Administrationssystem - Hovedmenu" Height="800" Width="1500" WindowState="Maximized" Background="#FFF0F0F0">
+        Title="Administrationssystem - Hovedmenu" Height="800" Width="1500" Background="#FFF0F0F0">
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition/>
@@ -51,14 +51,35 @@
         </Grid>
 
         <!-- Column 2 -->
-        <StackPanel Grid.Column="2" Grid.Row="1" Margin="10">
-            <Label Content="Hovedmenu" Padding="0" FontSize="12pt"/>
-            <Button Content="_Opret produkt" FontSize="10pt" Height="40" Margin="0, 10" Command="{Binding OpenAddProductWindowCommand}"/>
+        <Grid Grid.Column="2" Grid.Row="1">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="2*"/>
+                <RowDefinition Height="2*"/>
+                <RowDefinition Height="0.5*"/>
+            </Grid.RowDefinitions>
+            
+            <GroupBox x:Name="ProductBox" Header="Administrer produkter" Grid.Row="0">
+                <StackPanel Grid.Row="0" Margin="10">
+                <Button Content="_Opret produkt" FontSize="10pt" Height="40" Margin="0, 10" Command="{Binding OpenAddProductWindowCommand}"/>
+                <Button Content="_Rediger produkt" FontSize="10pt" Height="40" Margin="0, 10" Command="{Binding OpenEditProductWindowCommand}"/>
+                <Button Content="_Slet produkt" FontSize="10pt" Height="40" Margin="0, 10"/>
+            </StackPanel>
+            </GroupBox>
+            
+            <GroupBox x:Name="CatBox" Grid.Row="1" Header="Administrer kategorier">
+                <StackPanel Grid.Row="1" Margin="10">
+                <Button Content="O_pret kategori" FontSize="10pt" Height="40" Margin="0, 10" Command="{Binding OpenAddCategoryWindowCommand}"/>
+                    <Button Content="R_ediger kategori" FontSize="10pt" Height="40" Margin="0, 10" Command="{Binding OpenEditCategoryWindowCommand}"/>
+                <Button Content="S_let kategori" FontSize="10pt" Height="40" Margin="0, 10" Command="{Binding OpenAddCategoryWindowCommand}"/>
+            </StackPanel>
+            </GroupBox>
 
-            <Button Content="_Rediger produkt" FontSize="10pt" Height="40" Margin="0, 10" Command="{Binding OpenEditProductWindowCommand}"/>
-            <Button Content="_Slet produkt" FontSize="10pt" Height="40" Margin="0, 10"/>
-            <Button Content="_Luk administrationssystem" FontSize="10pt" Height="40" Margin="0, 10" Click="CloseMainWindowClick"/>
-        </StackPanel>
+            <Button Grid.Row="2" Content="_Luk administrationssystem" FontSize="10pt" Height="40" Margin="20, 10" Click="CloseMainWindowClick"/>
+
+
+        </Grid>
+        
+       
 
         <!-- Row 2 -->
         <StackPanel Orientation="Horizontal" Grid.Row="2" Grid.ColumnSpan="3">
