--- a/KasseApparat/KasseApparat/MainWindow.xaml
+++ b/KasseApparat/KasseApparat/MainWindow.xaml
@@ -6,7 +6,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:KasseApparat"
         mc:Ignorable="d"
-        Title="MainWindow" Height="500" Width="900">
+        Title="MainWindow" Width="1040" Height="550" >
     <Window.Resources>
         <local:ProductButtonControl x:Key="ProductButtonControl" />
         <local:ShoppingList x:Key="ShoppingList" />
@@ -14,13 +14,18 @@
 
     <Grid>
         <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="100*"/>
             <ColumnDefinition Width="343*"></ColumnDefinition>
             <ColumnDefinition Width="289*"></ColumnDefinition>
             <ColumnDefinition Width="262*"></ColumnDefinition>
         </Grid.ColumnDefinitions>
-        <GroupBox Grid.Column="0" DataContext="{StaticResource ProductButtonControl}" x:Name="CurrentButtonPage" 
-                  Header="Produkter" Margin="10,10,10.2,10.4" BorderThickness="2">
-            <Grid Margin="4">
+        <GroupBox Grid.Column="0" Header="Kategorier" BorderThickness="2"
+                  Margin="10">
+            <Button x:Name="button" Content="Button" HorizontalAlignment="Left" Margin="10" VerticalAlignment="Top" Width="75" Height="48"/>
+        </GroupBox>
+        <GroupBox Grid.Column="1" DataContext="{StaticResource ProductButtonControl}" x:Name="CurrentButtonPage" 
+                  Header="Produkter" Margin="10,10,10.2,10.4" BorderThickness="2" MaxWidth="500" MinWidth="275">
+            <Grid Margin="4" Grid.Row="0">
                 <Grid.RowDefinitions>
                     <RowDefinition Height="30*"></RowDefinition>
                     <RowDefinition Height="334*"/>
@@ -34,7 +39,8 @@
                         <ColumnDefinition Width="24*"></ColumnDefinition>
                         <ColumnDefinition Width="14*"></ColumnDefinition>
                     </Grid.ColumnDefinitions>
-                    <Button Margin="5" 
+                    <Button Margin="5"
+                            Grid.Column="0"
                             Content="Refresh"
                             Click="ButtonRefreshClick"></Button>
                     <Label Grid.Row="0" Grid.Column="1" 
@@ -288,7 +294,7 @@
                 </Grid>
             </Grid>
         </GroupBox>
-        <GroupBox Grid.Column="1" DataContext="{StaticResource ShoppingList}" x:Name="Sale" 
+        <GroupBox Grid.Column="2" DataContext="{StaticResource ShoppingList}" x:Name="Sale" 
                   Header="Salg" Margin="9.8,10,8,10.4" BorderThickness="2">
             <Grid Margin="4">
                 <Grid.ColumnDefinitions>
@@ -365,7 +371,7 @@
                 </Grid>
             </Grid>
         </GroupBox>
-        <GroupBox Grid.Column="2" x:Name="InputPrice" Header="Inputs" Margin="9.8,10,8,10.4" BorderThickness="2">
+        <GroupBox Grid.Column="3" x:Name="InputPrice" Header="Inputs" Margin="9.8,10,8,10.4" BorderThickness="2">
             <Grid Margin="0,10,-2.8,3.2">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition></ColumnDefinition>
