--- a/Backend/Backend/Views/MainWindow.xaml
+++ b/Backend/Backend/Views/MainWindow.xaml
@@ -22,7 +22,7 @@
         <Menu Grid.ColumnSpan="3">
             <MenuItem Header="_Filer">
                 <MenuItem Header="_Indstillinger" Command="{Binding OpenSettingsDialog}"/>
-                <MenuItem Header="Exit"/>
+                <MenuItem Header="Exit" Command="{Binding CloseMainWindowCommand}"/>
             </MenuItem>
             <MenuItem Header="Something"/>
         </Menu>
@@ -57,29 +57,24 @@
                 <RowDefinition Height="2*"/>
                 <RowDefinition Height="0.5*"/>
             </Grid.RowDefinitions>
-            
+
             <GroupBox x:Name="ProductBox" Header="Administrer produkter" Grid.Row="0">
                 <StackPanel Grid.Row="0" Margin="10">
-                <Button Content="_Opret produkt" FontSize="10pt" Height="40" Margin="0, 10" Command="{Binding OpenAddProductWindowCommand}"/>
-                <Button Content="_Rediger produkt" FontSize="10pt" Height="40" Margin="0, 10" Command="{Binding OpenEditProductWindowCommand}"/>
-                <Button Content="_Slet produkt" FontSize="10pt" Height="40" Margin="0, 10" Command="{Binding DeleteProductCommand}"/>
-            </StackPanel>
+                    <Button Content="_Opret produkt" FontSize="10pt" Height="40" Margin="0, 10" Command="{Binding OpenAddProductWindowCommand}"/>
+                    <Button Content="_Rediger produkt" FontSize="10pt" Height="40" Margin="0, 10" Command="{Binding OpenEditProductWindowCommand}"/>
+                    <Button Content="_Slet produkt" FontSize="10pt" Height="40" Margin="0, 10" Command="{Binding DeleteProductCommand}"/>
+                </StackPanel>
             </GroupBox>
-            
+
             <GroupBox x:Name="CatBox" Grid.Row="1" Header="Administrer kategorier">
                 <StackPanel Grid.Row="1" Margin="10">
-                <Button Content="O_pret kategori" FontSize="10pt" Height="40" Margin="0, 10" Command="{Binding OpenAddCategoryWindowCommand}"/>
+                    <Button Content="O_pret kategori" FontSize="10pt" Height="40" Margin="0, 10" Command="{Binding OpenAddCategoryWindowCommand}"/>
                     <Button Content="R_ediger kategori" FontSize="10pt" Height="40" Margin="0, 10" Command="{Binding OpenEditCategoryWindowCommand}"/>
-                <Button Content="S_let kategori" FontSize="10pt" Height="40" Margin="0, 10" Command="{Binding OpenAddCategoryWindowCommand}"/>
-            </StackPanel>
+                    <Button Content="S_let kategori" FontSize="10pt" Height="40" Margin="0, 10" Command="{Binding OpenAddCategoryWindowCommand}"/>
+                </StackPanel>
             </GroupBox>
-
-            <Button Grid.Row="2" Content="_Luk administrationssystem" FontSize="10pt" Height="40" Margin="20, 10" Click="CloseMainWindowClick"/>
-
-
+            <Button Grid.Row="2" Content="_Luk administrationssystem" FontSize="10pt" Height="40" Margin="20, 10" Command="{Binding CloseMainWindowCommand}"/>
         </Grid>
-        
-       
 
         <!-- Row 2 -->
         <StackPanel Orientation="Horizontal" Grid.Row="2" Grid.ColumnSpan="3">
