Added eventhandlers for a couple of events and created the socket connection thingy

--- a/Backend/Backend/Views/MainWindow.xaml
+++ b/Backend/Backend/Views/MainWindow.xaml
@@ -5,6 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Backend.Views"
         mc:Ignorable="d"
+        Loaded="MainWindow_OnLoaded"
         Title="Administrationssystem - Hovedmenu" Height="800" Width="1500" Background="#FFF0F0F0">
     <Grid>
         <Grid.ColumnDefinitions>
