Har tilføjet En kategori ved navn "All Product" der viser alle produkter i kasseapparatet på samme tid.

--- a/KasseApparat/KasseApparat/MainWindow.xaml
+++ b/KasseApparat/KasseApparat/MainWindow.xaml
@@ -39,8 +39,7 @@
                             Content="Categories"
                             Click="Categori_Click"
                             ContextMenuService.IsEnabled="False"
-                            Margin="5"
-                            DataContext="{StaticResource ProductButtonControl}">
+                            Margin="5">
                         <Button.ContextMenu >
                             <ContextMenu>
                             </ContextMenu>
